创建Model(sort,note) 完成基本的页面初始化

--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,7 @@
         <!-- Logo Header -->
         <div class="logo-header">
 
-            <a href="write.html" class="logo">
+            <a href="note.html" class="logo">
                 <img src="./src/assets/img/logoNotePlus.png" alt="navbar brand" class="navbar-brand" width="150px">
             </a>
             <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
@@ -464,7 +464,7 @@
                 </div>
                 <ul class="nav">
                     <li class="nav-item active">
-                        <a href="write.html">
+                        <a href="note.html">
                             <i class="fas fa-home"></i>
                             <p>使用教程</p>
                             <span class="badge badge-count">5</span>
