--- a/source/note.html
+++ b/source/note.html
@@ -9,10 +9,12 @@
     <link rel="icon" href="./src/assets/img/icon.ico" type="image/x-icon"/>
 
     <!-- vue CDN -->
-    <link rel="stylesheet" href="./src/assets/editor.md-master/css/editormd.css"/>
-    <script src="./src/assets/js/jquery.min.js"></script>
-                                        <script src="./src/assets/editor.md-master/editormd.js?v=1"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+      <link rel="stylesheet" href="./src/assets/editor.md-master/css/editormd.css"/>
+    <script src="./src/assets/js/core/jquery.3.2.1.min.js"></script>
+
+    <script src="./src/assets/editor.md-master/editormd.js?v=1"></script>
+
+ <!--    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
     <!-- Fonts and icons -->
     <script src="./src/assets/js/plugin/webfont/webfont.min.js"></script>
     <script src="./src/m_js/note.js"></script>
@@ -35,10 +37,11 @@
 
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <link rel="stylesheet" href="./src/assets/css/demo.css">
-    <script src="./src/m_js/note.js"></script>
+<!--    <script src="./src/m_js/note.js"></script>-->
 </head>
 
-<body onload="initPage()">
+<!--<body onload="initPage()">-->
+<body>
 <div class="wrapper" id="app1">
     <!--
 			Tip 1: You can change the background color of the main header using: data-background-color="blue | purple | light-blue | green | orange | red"
@@ -409,167 +412,238 @@
               </span>
                         <h4 class="text-section">共99篇笔记</h4>
                     </li>
-                    <li class="nav-item">
-                        <a data-toggle="collapse" href="#base">
-                            <i class="fas fa-layer-group"></i>
+                   <li class="nav-item">
+                        <a data-toggle="collapse" href="#python">
+                            <i class="fab fa-python"></i>
                             <p>Python</p>
                             <span class="caret"></span>
                         </a>
-                        <div class="collapse" id="base">
-
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a data-toggle="collapse" href="#forms">
-                            <i class="fas fa-pen-square"></i>
-                            <p>Java</p>
-                            <span class="caret"></span>
-                        </a>
-                        <div class="collapse" id="forms">
-
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a data-toggle="collapse" href="#tables">
-                            <i class="fas fa-table"></i>
-                            <p>Web开发</p>
-                            <span class="caret"></span>
-                        </a>
-                        <div class="collapse" id="tables">
+                        <div class="collapse" id="python">
                             <ul class="nav nav-collapse">
                                 <li>
                                     <a href="tables/tables.html">
                                         <span class="sub-item">Basic Table</span>
                                     </a>
                                 </li>
-                                <li>
-                                    <a href="tables/datatables.html">
-                                        <span class="sub-item">Datatables</span>
-                                    </a>
-                                </li>
+
                             </ul>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a data-toggle="collapse" href="#maps">
-                            <i class="fas fa-map-marker-alt"></i>
+                        <a data-toggle="collapse" href="#java">
+                            <i class="fab fa-java"></i>
+                            <p>Java</p>
+                            <span class="caret"></span>
+                        </a>
+                        <div class="collapse" id="java">
+                            <ul class="nav nav-collapse">
+                                <li>
+                                    <a href="tables/tables.html">
+                                        <span class="sub-item">Basic Table</span>
+                                    </a>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a data-toggle="collapse" href="#web">
+                            <i class="fas fa-code"></i>
+                            <p>Web开发</p>
+                            <span class="caret"></span>
+                        </a>
+                        <div class="collapse" id="web">
+                            <ul class="nav nav-collapse">
+                                <li>
+                                    <a href="tables/tables.html">
+                                        <span class="sub-item">Basic Table</span>
+                                    </a>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a data-toggle="collapse" href="#db">
+                            <i class="fas fa-database"></i>
                             <p>数据库</p>
                             <span class="caret"></span>
                         </a>
-                        <div class="collapse" id="maps">
+                        <div class="collapse" id="db">
+                            <ul class="nav nav-collapse">
+                                <li>
+                                    <a href="tables/tables.html">
+                                        <span class="sub-item">Basic Table</span>
+                                    </a>
+                                </li>
 
+                            </ul>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a data-toggle="collapse" href="#charts">
-                            <i class="far fa-chart-bar"></i>
+                        <a data-toggle="collapse" href="#5g">
+                            <i class="fas fa-broadcast-tower"></i>
                             <p>5G</p>
                             <span class="caret"></span>
                         </a>
-                        <div class="collapse" id="charts">
+                        <div class="collapse" id="5g">
+                            <ul class="nav nav-collapse">
+                                <li>
+                                    <a href="tables/tables.html">
+                                        <span class="sub-item">Basic Table</span>
+                                    </a>
+                                </li>
 
+                            </ul>
                         </div>
                     </li>
 
 
                     <li class="nav-item">
-                        <a data-toggle="collapse" href="#custompages">
-                            <i class="fas fa-paint-roller"></i>
+                        <a data-toggle="collapse" href="#game">
+                            <i class="fas fa-gamepad"></i>
                             <p>游戏开发</p>
                             <span class="caret"></span>
                         </a>
-                        <div class="collapse" id="custompages">
+                        <div class="collapse" id="game">
+                            <ul class="nav nav-collapse">
+                                <li>
+                                    <a href="tables/tables.html">
+                                        <span class="sub-item">Basic Table</span>
+                                    </a>
+                                </li>
 
+                            </ul>
                         </div>
                     </li>
 
                     <li class="nav-item">
-                        <a data-toggle="collapse" href="#custompages">
-                            <i class="fas fa-paint-roller"></i>
+                        <a data-toggle="collapse" href="#mobile">
+                            <i class="fas fa-mobile-alt"></i>
                             <p>移动应用开发</p>
                             <span class="caret"></span>
                         </a>
-                        <div class="collapse" id="custompages">
+                        <div class="collapse" id="mobile">
+                            <ul class="nav nav-collapse">
+                                <li>
+                                    <a href="tables/tables.html">
+                                        <span class="sub-item">Basic Table</span>
+                                    </a>
+                                </li>
 
+                            </ul>
                         </div>
                     </li>
 
                     <li class="nav-item">
-                        <a data-toggle="collapse" href="#custompages">
-                            <i class="fas fa-paint-roller"></i>
+                        <a data-toggle="collapse" href="#ops">
+                            <i class="fas fa-power-off"></i>
                             <p>运维</p>
                             <span class="caret"></span>
                         </a>
-                        <div class="collapse" id="custompages">
+                        <div class="collapse" id="ops">
+                            <ul class="nav nav-collapse">
+                                <li>
+                                    <a href="tables/tables.html">
+                                        <span class="sub-item">Basic Table</span>
+                                    </a>
+                                </li>
 
+                            </ul>
                         </div>
                     </li>
 
                     <li class="nav-item">
-                        <a data-toggle="collapse" href="#custompages">
-                            <i class="fas fa-paint-roller"></i>
+                        <a data-toggle="collapse" href="#sec">
+                            <i class="fas fa-user-secret"></i>
                             <p>网络安全</p>
                             <span class="caret"></span>
                         </a>
-                        <div class="collapse" id="custompages">
+                        <div class="collapse" id="sec">
+                            <ul class="nav nav-collapse">
+                                <li>
+                                    <a href="tables/tables.html">
+                                        <span class="sub-item">Basic Table</span>
+                                    </a>
+                                </li>
 
+                            </ul>
                         </div>
                     </li>
 
                     <li class="nav-item">
-                        <a data-toggle="collapse" href="#custompages">
-                            <i class="fas fa-paint-roller"></i>
+                        <a data-toggle="collapse" href="#iot">
+                            <i class="fab fa-soundcloud"></i>
                             <p>物联网</p>
                             <span class="caret"></span>
                         </a>
-                        <div class="collapse" id="custompages">
+                        <div class="collapse" id="iot">
+                            <ul class="nav nav-collapse">
+                                <li>
+                                    <a href="tables/tables.html">
+                                        <span class="sub-item">Basic Table</span>
+                                    </a>
+                                </li>
 
+                            </ul>
                         </div>
                     </li>
 
                     <li class="nav-item">
-                        <a data-toggle="collapse" href="#custompages">
-                            <i class="fas fa-paint-roller"></i>
+                        <a data-toggle="collapse" href="#fund">
+                            <i class="fas fa-boxes"></i>
                             <p>计算机基础</p>
                             <span class="caret"></span>
                         </a>
-                        <div class="collapse" id="custompages">
+                        <div class="collapse" id="fund">
+                            <ul class="nav nav-collapse">
+                                <li>
+                                    <a href="tables/tables.html">
+                                        <span class="sub-item">Basic Table</span>
+                                    </a>
+                                </li>
 
+                            </ul>
                         </div>
                     </li>
 
                     <li class="nav-item">
-                        <a data-toggle="collapse" href="#custompages">
-                            <i class="fas fa-paint-roller"></i>
+                        <a data-toggle="collapse" href="#avi">
+                            <i class="fas fa-video"></i>
                             <p>音视频开发</p>
                             <span class="caret"></span>
                         </a>
-                        <div class="collapse" id="custompages">
+                        <div class="collapse" id="fund">
+                            <ul class="nav nav-collapse">
+                                <li>
+                                    <a href="tables/tables.html">
+                                        <span class="sub-item">Basic Table</span>
+                                    </a>
+                                </li>
 
+                            </ul>
                         </div>
                     </li>
 
+
                     <li class="nav-item">
-                        <a data-toggle="collapse" href="#custompages">
-                            <i class="fas fa-paint-roller"></i>
+                        <a data-toggle="collapse" href="#other">
+                            <i class="fas fa-layer-group"></i>
                             <p>其他</p>
                             <span class="caret"></span>
                         </a>
-                        <div class="collapse" id="custompages">
+                        <div class="collapse" id="other">
+                            <ul class="nav nav-collapse">
+                                <li>
+                                    <a href="tables/tables.html">
+                                        <span class="sub-item">Basic Table</span>
+                                    </a>
+                                </li>
 
+                            </ul>
                         </div>
                     </li>
 
-                    <li class="nav-item">
-                        <a data-toggle="collapse" href="#custompages">
-                            <i class="fas fa-paint-roller"></i>
-                            <p>游戏开发</p>
-                            <span class="caret"></span>
-                        </a>
-                        <div class="collapse" id="custompages">
-
-                        </div>
-                    </li>
 
                 </ul>
             </div>
@@ -874,7 +948,7 @@
                     </button>
                 </li>
                 <li>
-                    <button id="alert_demo_3_3" class="btn btn-success btn-sm">保存</button>
+                    <button id="add_note" onclick="addnote()" class="btn btn-success btn-sm">保存</button>
                 </li>
 
                 <li>
@@ -903,7 +977,6 @@
 
 
 <!--   Core JS Files   -->
-<script src="./src/assets/js/core/jquery.3.2.1.min.js"></script>
 <script src="./src/assets/js/core/popper.min.js"></script>
 <script src="./src/assets/js/core/bootstrap.min.js"></script>
 
@@ -960,7 +1033,7 @@
 <script>
     //== Class definition
 
- var SweetAlert2Demo = function () {
+    var SweetAlert2Demo = function () {
 
         //== Demos
         var initDemos = function () {
